# CMake control file for building adcirc2xmdf

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
PROJECT( adcirc2xmdf )

SET(CMAKE_COLOR_MAKEFILE ON)
SET(CMAKE_INCLUDE_CURRENT_DIR ON)

# Default to a release build
IF ( NOT CMAKE_BUILD_TYPE )
  SET(CMAKE_BUILD_TYPE "Release")
ENDIF ()

SET(ADC2XMDF_MAJOR_VERSION 0)
SET(ADC2XMDF_MINOR_VERSION 1)
SET(ADC2XMDF_PATCH_VERSION 0)
SET(ADC2XMDF_VERSION_STRING
  "${ADC2XMDF_MAJOR_VERSION}.${ADC2XMDF_MINOR_VERSION}.${ADC2XMDF_PATCH_VERSION}")

# Gather library requirements---these are a Fortran compiler, the NetCDF
# Fortran interface and the XMDF library.
SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake/Modules ${CMAKE_MODULE_PATH})

ENABLE_LANGUAGE( Fortran )
SET(NETCDF_F90 TRUE)
FIND_PACKAGE( NetCDF REQUIRED )
FIND_PACKAGE( XMDF REQUIRED )

INCLUDE_DIRECTORIES( ${NETCDF_INCLUDES} ${XMDF_INCLUDE_DIRS} )

SET( ADC2XMDF_SRCS ${PROJECT_SOURCE_DIR}/adcirc2xmdf.f90 )
ADD_EXECUTABLE( adcirc2xmdf ${ADC2XMDF_SRCS} )
TARGET_LINK_LIBRARIES( adcirc2xmdf ${NETCDF_LIBRARIES_F90} ${XMDF_LIBRARIES} )

INSTALL( TARGETS adcirc2xmdf RUNTIME DESTINATION bin )
